fix screen fit on mobiles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@
 }
 
 .full-column {
-  height: calc(100vh - 3rem);
+  height: calc(100vh - 6rem);
 }
 
 .items-list {
@@ -49,7 +49,12 @@
 #note_list {
   display: none !important;
 }
+
 @include media-breakpoint-up(md) {
+  .full-column {
+    height: calc(100vh - 3rem);
+  }
+
   #note_list {
     display: flex !important;
   }
